@@ -10,7 +10,6 @@ import java.util.stream.Collectors;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import com.goormthonuniv.ownearth.converter.ItemConverter;
 import com.goormthonuniv.ownearth.converter.MemberConverter;
 import com.goormthonuniv.ownearth.domain.Item;
 import com.goormthonuniv.ownearth.domain.enums.ItemCategory;
@@ -19,7 +18,6 @@ import com.goormthonuniv.ownearth.domain.mapping.Friend;
 import com.goormthonuniv.ownearth.domain.mapping.MemberItem;
 import com.goormthonuniv.ownearth.domain.mapping.MemberMission;
 import com.goormthonuniv.ownearth.domain.member.Member;
-import com.goormthonuniv.ownearth.dto.response.ItemResponseDto.InventoryItemResponse;
 import com.goormthonuniv.ownearth.dto.response.MemberResponseDto.GetEarthResponse;
 import com.goormthonuniv.ownearth.dto.response.MemberResponseDto.MonthlyMissionStatusResponse;
 import com.goormthonuniv.ownearth.exception.GlobalErrorCode;
@@ -102,6 +100,7 @@ public class MemberQueryServiceImpl implements MemberQueryService {
     }
   }
 
+  @Override
   public GetEarthResponse getEarthStatus(Member member, Long memberId) {
 
     if (!(member.getId().equals(memberId))) {
@@ -119,10 +118,7 @@ public class MemberQueryServiceImpl implements MemberQueryService {
         memberItemRepository.findMemberItemsByMemberIdAndIsUsingTrue(memberId);
 
     List<Long> usingItems =
-        usedMemberItems.stream()
-            .map(MemberItem::getItem)
-            .map(Item::getId)
-            .collect(Collectors.toList());
+        usedMemberItems.stream().map(MemberItem::getItem).map(Item::getId).toList();
 
     LocalDateTime now = LocalDateTime.now();
 
@@ -166,21 +162,12 @@ public class MemberQueryServiceImpl implements MemberQueryService {
   }
 
   @Override
-  public List<InventoryItemResponse> getMyInventoryItem(Member member, ItemCategory itemCategory) {
+  public List<MemberItem> getMyInventoryItem(Member member, ItemCategory itemCategory) {
 
-    List<InventoryItemResponse> myInventoryItems =
+    List<MemberItem> myInventoryItems =
         memberItemRepository
-            .findMemberItemsByMemberIdAndItemItemCategory(member.getId(), itemCategory)
+            .findMemberItemsByMemberAndItemItemCategory(member, itemCategory)
             .stream()
-            .map(
-                memberItem ->
-                    ItemConverter.toItemInfo(memberItem.getItem(), memberItem.getIsUsing()))
-            .map(
-                itemInfo ->
-                    ItemConverter.toInventoryItemResponse(
-                        itemInfo.getItem().getId(),
-                        itemInfo.getItem().getName(),
-                        itemInfo.getIsUsing()))
             .collect(Collectors.toList());
 
     return myInventoryItems;
